--- a/workflow/snake.yml
+++ b/workflow/snake.yml
@@ -1,20 +1,26 @@
-name: Generate Snake
+name: Generate Snake Contribution Graph
 
 on:
-  schedule: # every 12 hours
-    - cron: "0 */12 * * *"
-  workflow_dispatch:
+  schedule: # Runs every 24 hours
+    - cron: "0 0 * * *"
+  workflow_dispatch: # Allow manual trigger
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: Platane/snk@v3
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Generate Snake
+        uses: Platane/snk@master
         with:
           github_user_name: raswanthmalai19
-          outputs: dist/github-contribution-grid-snake.svg
-      - name: Push Snake Animation
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg
+
+      - name: Push Snake to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
